dev-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: communicator-dev
  name: gateway
  labels:
    purpose: dev
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      serviceAccountName: gateway
      containers:
        - name: gateway
          image: gateway
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: communicator-dev
  name: gateway
  labels:
    app: gateway
    service: gateway
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: gateway

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: communicator-dev
  annotations:
    konghq.com/plugins: communicator-dev-cors
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: communicator-dev
  name: gateway
spec:
  hosts:
    - gateway
  http:
    - route:
        - destination:
            host: gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: communicator-dev
  name: gateway
spec:
  host: gateway
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
